# ComfyUI-LuminaWrapper

./: README.md  hf_token.json  nodes.py  pyproject.toml  requirements.txt  transport.py
examples/: lumina_next_i2i_example_01.json  lumina_next_t2i_composition_example_01.json  lumina_next_t2i_example_01.json
lumina_models/: components.py  nextdit.py
models/: nextdit.py
