[project]
name = "comfyui-luminawrapper"
description = "ComfyUI wrapper nodes for Lumina models"
version = "1.0.1"
license = { text = "MIT License" }
dependencies = ["torchdiffeq", "accelerate", "tqdm", "transformers>=4.38.0"]

[project.urls]
Repository = "https://github.com/kijai/ComfyUI-LuminaWrapper"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "kijai"
DisplayName = "ComfyUI-LuminaWrapper"
Icon = ""
